# Hong

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.user.651663f  CMakeLists.txt.user.fb345ab  ConversionManager.cpp  ConversionManager.h  ConvertDialog.cpp  ConvertDialog.h  KSlider.cpp  KSlider.h  KVideoWidget.cpp  KVideoWidget.h  PlaylistWindow.cpp  PlaylistWindow.h  README.md  VisualizerWidget.cpp  VisualizerWidget.h  mainwindow.cpp  mainwindow.h  resources.qrc
build-Hong-Desktop_Qt_6_6_3_MinGW_64_bit-Debug/: CMakeCache.txt  qtcsettings.cmake
